# starvein

./: .dockerignore  .env.example  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  Caddyfile  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  eslint.jsdoc.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  deploy.yml  release-desktop.yml
apps/desktop/: README.md  index.html  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: capture.rs  elevation.rs  keyboard_hook.rs  lib.rs  main.rs  ocr.rs  secrets.rs  shortcuts.rs  tray.rs
data/curated/: celestial-bodies.json  location-guides.json  mining-gadgets.json  mining-lasers.json  mining-modules.json  mining-vehicles.json  ore-codes.json  ore-occurrences.json  ores.json  signature-profiles.json  star-systems.json
design-system/: MASTER.md
docs/: DEPLOY.md  SEO-OPS.md
e2e/: admin-dashboard.spec.ts  admin.spec.ts  auth.spec.ts  blueprints.spec.ts  branding-compliance.spec.ts  calculator.spec.ts  chat.spec.ts  collected-blueprints.spec.ts  companion.spec.ts  compare.spec.ts  crafting.spec.ts  device-auth.spec.ts  guides.spec.ts  home-explorer.spec.ts  loadouts.spec.ts  location-guides.spec.ts  locations.spec.ts  materials.spec.ts  nav.spec.ts  not-found.spec.ts  occurrences.spec.ts  ores.spec.ts  price-ticker.spec.ts  prices.spec.ts  refinery-jobs.spec.ts  responsive.spec.ts  routes.ts  search.spec.ts  security-headers.spec.ts  seo.spec.ts  ships.spec.ts  signatures.spec.ts  smoke.spec.ts  submissions.spec.ts  url-state.ts  warehouse.spec.ts
scripts/: promote.ts  seed.ts  sync-uex.ts  sync-wiki.ts
src/: instrumentation.ts  proxy.ts
src/app/: global-error.tsx  globals.css  manifest.ts  robots.ts  sitemap.ts
src/i18n/: messages.test.ts  messages.ts  request.ts  routing.ts
src/lib/: auth-client.ts  auth-config.test.ts  auth-config.ts  auth.ts  cn.test.ts  cn.ts  confidence-score.test.ts  confidence-score.ts  data-cache.test.ts  data-cache.ts  db.integration.test.ts  db.ts  env.test.ts  env.ts  indexnow.test.ts  indexnow.ts  patch.ts  rarity.test.ts  rarity.ts  rate-limit.ts  read-rate-limit.test.ts  (+24 more)
(+695 files in other folders)
